--- a/Siciarek/ChatBundle/composer.json
+++ b/Siciarek/ChatBundle/composer.json
@@ -41,9 +41,9 @@
         "sensio/generator-bundle": "~2.3"
     },
     "autoload": {
-        "psr-0": { "Siciarek\\ChatBundle": "src/" }
+        "psr-0": {
+            "Siciarek\\ChatBundle": ""
+        }
     },
-    "bin": [
-
-    ]
+    "target-dir": "Siciarek/ChatBundle"
 }
