--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,26 @@
             "email": "siciarek@gmail.com"
         }
     ],
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.4",
-        "symfony/framework-bundle": "~2.3|~3.0",
-        "symfony/serializer": "~2.0|~3.0",
-        "symfony/console": "~2.3|~3.0",
-        "stof/doctrine-extensions-bundle": "dev-master", 
+        "jms/security-extra-bundle": "dev-master",
+        "friendsofsymfony/user-bundle": "~1.3",
         "knplabs/doctrine-behaviors": "dev-master"
     },
-    "minimum-stability": "dev",
     "require-dev": {
+        "php": ">=5.3.9",
+        "symfony/symfony": "2.7.*",
+        "doctrine/orm": "v2.4.8",
+        "doctrine/doctrine-bundle": "~1.6",
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/swiftmailer-bundle": "~2.3",
+        "symfony/monolog-bundle": "~2.4",
+        "sensio/distribution-bundle": "~4.0",
+        "sensio/framework-extra-bundle": "^3.0.2",
+        "incenteev/composer-parameter-handler": "~2.0",
+        
+        "doctrine/doctrine-fixtures-bundle": "2.2.1",
         "instaclick/php-webdriver": "~1.1",
         "behat/behat": "~3.0.6",
         "behat/mink-extension": "*",
@@ -41,7 +51,9 @@
         "sensio/generator-bundle": "~2.3"
     },
     "autoload": {
-        "psr-0": { "Siciarek\\ChatBundle": "src/" }
+        "psr-0": {
+            "Siciarek\\ChatBundle": "src/"
+        }
     },
     "bin": [
 
