--- a/src/Siciarek/ChatBundle/Resources/config/services.yml
+++ b/src/Siciarek/ChatBundle/Resources/config/services.yml
@@ -1,1 +1,12 @@
-services: ~ 
+services:
+
+    chat.message:
+        class: Siciarek\ChatBundle\Model\ChatMessage
+        calls:
+            - [ setContainer, [ '@service_container' ] ]
+
+    chat.channel:
+        class: Siciarek\ChatBundle\Model\ChatChannel
+        calls:
+            - [ setContainer, [ '@service_container' ] ]
+        
