--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ extra.bat
 /DataFixtures
 /Entity/User.php
 /Entity/Group.php
+/Entity/Session.php
 
 # Cache and logs (Symfony2)
 /app/*.db3
@@ -74,7 +75,7 @@ extra.bat
 
 # Composer PHAR
 /composer.phar
-#/composer.lock
+/composer.lock
 
 /properties.conf
 /nbproject/private/
